Fix: image too big

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -59,6 +59,18 @@
 		margin: 0 0 _size(element-margin) 0;
 	}
 
+	#main .inner iframe {
+		display: block;
+		max-width: 100%;
+		margin: 0 0 _size(element-margin) 0;
+
+		@include breakpoint(small) {
+			width: 100%;
+			height: auto;
+			aspect-ratio: 16 / 9;
+		}
+	}
+
 	blockquote > p {
 		margin: 0;
 	}
